==> ChibiOS/ChibiOS-Contrib/os/hal/ports/SILABS/LLD/EFR32FG23/EUSARTv1/hal_sio_lld.c <==
#include "hal.h"
#define EUSART_IEN_RX_ERRORS                (EUSART_IEN_RXOF  /* RX overrun    */ | \
                                             EUSART_IEN_FERR  /* Frame error.  */ | \
                                             EUSART_IEN_PERR) /* Parity error. */
#define EUSART_IF_RX_ERRORS                 (EUSART_IF_RXOF  /* RX overrun    */ | \
                                             EUSART_IF_FERR  /* Frame error.  */ | \
                                             EUSART_IF_PERR) /* Parity error. */
#define EUSART_IF_CFG_FORBIDDEN             (EUSART_IF_TXFL                      | \
                                              EUSART_IF_TXC                      | \
                                              EUSART_IF_RXFL                     | \
                                              EUSART_IF_RX_ERRORS)
#define USART_IEN_RX_ERRORS                 (USART_IEN_RXOF  /* RX overrun    */  | \
                                             USART_IEN_FERR  /* Frame error.  */  | \
                                             USART_IEN_PERR) /* Parity error. */
#define USART_IF_RX_ERRORS                  (USART_IF_RXOF  /* RX overrun    */  | \
                                             USART_IF_FERR  /* Frame error.  */  | \
                                             USART_IF_PERR) /* Parity error. */

__STATIC_INLINE void usart_enable_rx_irq(SIODriver* siop) {

  if ((siop->enabled & SIO_EV_RXNOTEMPY) != 0U) {
    if (_sio_lld_is_usart(siop)) {
      USART_TypeDef* usart = siop->usart;
      usart->IEN_SET = USART_IEN_RXFULL;
    } else {
      USART_TypeDef* usart = siop->usart;
      usart->IEN_SET = EUSART_IEN_RXFL;
    }
  }
}

__STATIC_INLINE void usart_enable_tx_irq(SIODriver* siop) {

  if ((siop->enabled & SIO_EV_TXNOTFULL) != 0U) {
    if (_sio_lld_is_usart(siop)) {
      USART_TypeDef* usart = siop->usart;
      usart->IEN_SET = USART_IEN_TXBL;
    } else {
      EUSART_TypeDef* usart = siop->usart;
      usart->IEN_SET = EUSART_IEN_TXFL;
    }
  }
}

__STATIC_INLINE void usart_enable_tx_end_irq(SIODriver* siop) {

  if ((siop->enabled & SIO_EV_TXDONE) != 0U) {
    if (_sio_lld_is_usart(siop)) {
      USART_TypeDef* usart = siop->usart;
      usart->IEN_SET = USART_IEN_TXC;
    } else {
      EUSART_TypeDef* usart = siop->usart;
      usart->IEN_SET = EUSART_IEN_TXC;
    }
  }
}

void sio_lld_init(void) {

  /* Driver initialization.*/
#if EFR32_SIO_USE_EUSART1 == TRUE
  sioObjectInit(&SIOD1);
  SIOD1.usart = EUSART0;
  SIOD1.clock = EFR32_EUSART1CLK;
#endif

#if EFR32_SIO_USE_EUSART2 == TRUE
  sioObjectInit(&SIOD2);
  SIOD2.usart = EUSART1;
  SIOD2.clock = EFR32_EUSART23CLK;
#endif

#if EFR32_SIO_USE_EUSART3 == TRUE
  sioObjectInit(&SIOD3);
  SIOD3.usart = EUSART2;
  SIOD3.clock = EFR32_EUSART23CLK;
#endif

#if EFR32_SIO_USE_USART1 == TRUE
  sioObjectInit(&SIOD4);
  SIOD4.usart = USART0;
  SIOD4.clock = EFR32_USART1CLK;
#endif
}

msg_t sio_lld_start(SIODriver* siop) {

  osalDbgAssert((siop->config != NULL), "invalid config");

  if (siop->state == SIO_STOP) {
    /* Enables the peripheral.*/
    /* Configures the peripheral.*/
#if EFR32_SIO_USE_EUSART1 == TRUE
    if (&SIOD1 == siop) {
      CMU->CLKEN1_SET = CMU_CLKEN1_EUSART0;

      _sio_lld_start_eusart(siop);

      nvicEnableVector(EFR32_EUSART1_RX_NUMBER, EFR32_EUSART1_RX_IRQ_PRIORITY);
      nvicEnableVector(EFR32_EUSART1_TX_NUMBER, EFR32_EUSART1_TX_IRQ_PRIORITY);
    }
#endif

#if EFR32_SIO_USE_EUSART2 == TRUE
    if (&SIOD2 == siop) {
      CMU->CLKEN1_SET = CMU_CLKEN1_EUSART1;

      _sio_lld_start_eusart(siop);

      nvicEnableVector(EFR32_EUSART2_RX_NUMBER, EFR32_EUSART2_RX_IRQ_PRIORITY);
      nvicEnableVector(EFR32_EUSART2_TX_NUMBER, EFR32_EUSART2_TX_IRQ_PRIORITY);
    }
#endif

#if EFR32_SIO_USE_EUSART3 == TRUE
    if (&SIOD3 == siop) {
      CMU->CLKEN1_SET = CMU_CLKEN1_EUSART2;

      _sio_lld_start_eusart(siop);

      nvicEnableVector(EFR32_EUSART3_RX_NUMBER, EFR32_EUSART3_RX_IRQ_PRIORITY);
      nvicEnableVector(EFR32_EUSART3_TX_NUMBER, EFR32_EUSART3_TX_IRQ_PRIORITY);
    }
#endif

#if EFR32_SIO_USE_USART1 == TRUE
    if (&SIOD4 == siop) {
      CMU->CLKEN0_SET = CMU_CLKEN0_USART0;

      _sio_lld_start_usart(siop);

      nvicEnableVector(EFR32_USART1_RX_NUMBER, EFR32_USART1_RX_IRQ_PRIORITY);
      nvicEnableVector(EFR32_USART1_TX_NUMBER, EFR32_USART1_TX_IRQ_PRIORITY);
    }
#endif
  }

  return HAL_RET_SUCCESS;
}

void sio_lld_stop(SIODriver* siop) {

  if (siop->state == SIO_READY) {
    /* Resets the peripheral.*/
    /* Disables the peripheral.*/
#if EFR32_SIO_USE_EUSART1 == TRUE
    if (&SIOD1 == siop) {
      _sio_lld_stop_eusart(siop);
      CMU->CLKEN1_CLR = CMU_CLKEN1_EUSART0;
    }
#endif

#if EFR32_SIO_USE_EUSART2 == TRUE
    if (&SIOD2 == siop) {
      _sio_lld_stop_eusart(siop);
      CMU->CLKEN1_CLR = CMU_CLKEN1_EUSART1;
    }
#endif

#if EFR32_SIO_USE_EUSART3 == TRUE
    if (&SIOD3 == siop) {
      _sio_lld_stop_eusart(siop);
      CMU->CLKEN1_CLR = CMU_CLKEN1_EUSART2;
    }
#endif

#if EFR32_SIO_USE_USART1 == TRUE
    if (&SIOD4 == siop) {
      _sio_lld_stop_usart(siop);
      CMU->CLKEN0_CLR = CMU_CLKEN0_USART0;
    }
#endif
  }
}

sioevents_t sio_lld_get_and_clear_events(SIODriver* siop) {

  uint32_t isr, status;
  sioevents_t events;

  if (_sio_lld_is_usart(siop)) {
    USART_TypeDef* usart = siop->usart;

    /* Getting all ISR flags.*/
    isr = usart->IF & (USART_IF_RX_ERRORS  |
                       USART_IF_RXFULL     |
                       USART_IF_TXBL       |
                       USART_IF_TXC);

    /* Clearing captured events.*/
    usart->IF_CLR = isr;

    /* Status flags cleared, now the RX-related interrupts can be
       enabled again.*/
    usart_enable_rx_irq(siop);
    usart_enable_rx_errors_irq(siop);

    /* Translating the status flags in SIO events.*/
    events = __sio_reloc_field(isr, _USART_IF_FERR_MASK, _USART_IF_FERR_SHIFT, SIO_EV_FRAMING_ERR_POS) |
             __sio_reloc_field(isr, _USART_IF_PERR_MASK, _USART_IF_PERR_SHIFT, SIO_EV_PARITY_ERR_POS) |
             __sio_reloc_field(isr, _USART_IF_RXOF_MASK, _USART_IF_RXOF_SHIFT, SIO_EV_OVERRUN_ERR_POS) |
             __sio_reloc_field(isr, _USART_IF_RXFULL_MASK, _USART_IF_RXFULL_SHIFT, SIO_EV_RXNOTEMPY_POS) |
             __sio_reloc_field(isr, _USART_IF_TXBL_MASK, _USART_IF_TXBL_SHIFT, SIO_EV_TXNOTFULL_POS) |
             __sio_reloc_field(isr, _USART_IF_TXC_MASK,  _USART_IF_TXC_SHIFT,  SIO_EV_TXDONE_POS);
  } else {
    EUSART_TypeDef* usart = siop->usart;

    /* Getting all ISR flags.*/
    isr = usart->IF & (EUSART_IF_RX_ERRORS  |
                       EUSART_IF_RXFL       |
                       EUSART_IF_TXFL       |
                       EUSART_IF_TXC);

    status = usart->STATUS & EUSART_STATUS_RXIDLE;

    /* Clearing captured events.*/
    usart->IF_CLR = isr;

    /* Status flags cleared, now the RX-related interrupts can be
       enabled again.*/
    usart_enable_rx_irq(siop);
    usart_enable_rx_errors_irq(siop);

    /* Translating the status flags in SIO events.*/
    events = __sio_reloc_field(isr, _EUSART_IF_FERR_MASK, _EUSART_IF_FERR_SHIFT, SIO_EV_FRAMING_ERR_POS) |
             __sio_reloc_field(isr, _EUSART_IF_PERR_MASK, _EUSART_IF_PERR_SHIFT, SIO_EV_PARITY_ERR_POS) |
             __sio_reloc_field(isr, _EUSART_IF_RXOF_MASK, _EUSART_IF_RXOF_SHIFT, SIO_EV_OVERRUN_ERR_POS) |
             __sio_reloc_field(isr, _EUSART_IF_RXFL_MASK, _EUSART_IF_RXFL_SHIFT, SIO_EV_RXNOTEMPY_POS) |
             __sio_reloc_field(isr, _EUSART_IF_TXFL_MASK, _EUSART_IF_TXFL_SHIFT, SIO_EV_TXNOTFULL_POS) |
             __sio_reloc_field(isr, _EUSART_IF_TXC_MASK,  _EUSART_IF_TXC_SHIFT,  SIO_EV_TXDONE_POS) |
             __sio_reloc_field(status, _EUSART_STATUS_RXIDLE_MASK, _EUSART_STATUS_RXIDLE_SHIFT, SIO_EV_RXIDLE_POS);
  }

  return events;
}

void sio_lld_serve_interrupt(SIODriver* siop) {

  if (_sio_lld_is_usart(siop)) {
    sio_lld_serve_interrupt_usart(siop);
  } else {
    sio_lld_serve_interrupt_eusart(siop);
  }
}
