==> ChibiOS/ChibiOS-Contrib/os/hal/ports/SAM/LLD/SERCOMv1/hal_sio_lld.c <==
#include "hal.h"
#include "sercom_clk.h"
#define SERCOM_UART_CTRLA_FORBIDDEN                                  (SERCOM_USART_INT_CTRLA_ENABLE_Msk | \
                                                                      SERCOM_USART_INT_CTRLA_SWRST_Msk | \
                                                                      SERCOM_USART_INT_CTRLA_TXPO_Msk | \
                                                                      SERCOM_USART_INT_CTRLA_RXPO_Msk)
#define SERCOM_UART_CTRLB_FORBIDDEN                                  (SERCOM_USART_INT_CTRLB_ENC_Msk)
#define SERCOM_USART_INTENSET_FULL_IRQ                               (SERCOM_USART_INT_INTENSET_DRE_Msk | \
                                                                      SERCOM_USART_INT_INTENSET_TXC_Msk | \
                                                                      SERCOM_USART_INT_INTENSET_RXC_Msk | \
                                                                      SERCOM_USART_INT_INTENSET_RXBRK_Msk | \
                                                                      SERCOM_USART_INT_INTENSET_ERROR_Msk);

static inline void usart_enable_rx_irq(SIODriver *siop)
{
  #if SIO_USE_SYNCHRONIZATION == TRUE
    siop->usart->SERCOM_INTENSET |= SERCOM_USART_INT_INTENSET_RXC_Msk;
  #else
    if (siop->operation->rx_cb != NULL) {
      siop->usart->SERCOM_INTENSET |= SERCOM_USART_INT_INTENSET_RXC_Msk;
    }
  #endif
}

static inline void usart_enable_tx_irq(SIODriver *siop) {

#if SIO_USE_SYNCHRONIZATION == TRUE
  siop->usart->SERCOM_INTENSET |= SERCOM_USART_INT_INTENSET_DRE_Msk;
#else
  if (siop->operation->tx_cb != NULL) {
    siop->usart->CR3 |= SERCOM_USART_INT_INTENSET_DRE_Msk;
  }
#endif
}

static inline void usart_enable_tx_end_irq(SIODriver *siop) {

#if SIO_USE_SYNCHRONIZATION == TRUE
  siop->usart->SERCOM_INTENSET |= SERCOM_USART_INT_INTENSET_TXC_Msk;
#else
  if (siop->operation->tx_end_cb != NULL) {
    siop->usart->SERCOM_INTENSET |= SERCOM_USART_INT_INTENSET_TXC_Msk;
  }
#endif
}

void sio_lld_serve_interrupt(SIODriver *siop) {
  osalDbgAssert(siop->state == SIO_ACTIVE, "invalid state");
  uint8_t intflag = siop->usart->SERCOM_INTFLAG;
  uint8_t intenset = siop->usart->SERCOM_INTENSET;
  uint8_t evtmask = intflag & (SERCOM_USART_INT_INTFLAG_ERROR_Msk | 
                                SERCOM_USART_INT_INTFLAG_RXBRK_Msk);
  if(evtmask != 0) {
    siop->usart->SERCOM_INTENCLR = (SERCOM_USART_INT_INTENCLR_ERROR_Msk | SERCOM_USART_INT_INTENCLR_RXBRK_Msk);
    __sio_callback_rx_evt(siop);

    /* Waiting thread woken, if any.*/
    __sio_wakeup_rx(siop, SIO_MSG_ERRORS);
  }
  if((intflag & SERCOM_USART_INT_INTFLAG_RXC_Msk) && 
    (intenset & SERCOM_USART_INT_INTENSET_RXC_Msk)) {
    siop->usart->SERCOM_INTENCLR = SERCOM_USART_INT_INTENCLR_RXC_Msk;
    /* The callback is invoked if defined.*/
    __sio_callback_rx(siop);

    /* Waiting thread woken, if any.*/
    __sio_wakeup_rx(siop, MSG_OK);
  }
  /* TX FIFO is non-full.*/
  if ((intflag & SERCOM_USART_INT_INTFLAG_DRE_Msk) && 
    (intenset & SERCOM_USART_INT_INTENSET_DRE_Msk))  {
    siop->usart->SERCOM_INTENCLR = SERCOM_USART_INT_INTENCLR_DRE_Msk;
    /* The callback is invoked if defined.*/
    __sio_callback_tx(siop);

    /* Waiting thread woken, if any.*/
    __sio_wakeup_tx(siop, MSG_OK);
  }

  /* Physical transmission end.*/
  if ((intflag & SERCOM_USART_INT_INTFLAG_TXC_Msk) && 
    (intenset & SERCOM_USART_INT_INTENSET_TXC_Msk)) {
    siop->usart->SERCOM_INTENCLR = SERCOM_USART_INT_INTENCLR_TXC_Msk;
    /* The callback is invoked if defined.*/
    __sio_callback_tx_end(siop);

    /* Waiting thread woken, if any.*/
    __sio_wakeup_txend(siop, MSG_OK);
  }
}

void sio_lld_init(void) {

#if SAM_SIO_USE_SERCOM0 == TRUE
  /* Driver initialization.*/
  sioObjectInit(&SIOD1);
  PM_REGS->PM_APBCMASK |= PM_APBCMASK_SERCOM0_Msk;
  SIOD1.usart = &SERCOM0_REGS->USART_INT;
  SIOD1.clock = SAM_SERCOM0_GCLK_SRC_FREQ;
#endif
#if SAM_SIO_USE_SERCOM1 == TRUE
  /* Driver initialization.*/
  sioObjectInit(&SIOD2);
  PM_REGS->PM_APBCMASK |= PM_APBCMASK_SERCOM1_Msk;
  SIOD2.usart = &SERCOM1_REGS->USART_INT;
  SIOD2.clock = SAM_SERCOM1_GCLK_SRC_FREQ;
#endif
#if SAM_SIO_USE_SERCOM2 == TRUE
  /* Driver initialization.*/
  sioObjectInit(&SIOD3);
  PM_REGS->PM_APBCMASK |= PM_APBCMASK_SERCOM2_Msk;
  SIOD3.usart = &SERCOM2_REGS->USART_INT;
  SIOD3.clock = SAM_SERCOM2_GCLK_SRC_FREQ;
#endif
#if SAM_SIO_USE_SERCOM3 == TRUE
  /* Driver initialization.*/
  sioObjectInit(&SIOD4);
  PM_REGS->PM_APBCMASK |= PM_APBCMASK_SERCOM3_Msk;
  SIOD4.usart = &SERCOM3_REGS->USART_INT;
  SIOD4.clock = SAM_SERCOM3_GCLK_SRC_FREQ;
#endif
#if SAM_SIO_USE_SERCOM4 == TRUE
  /* Driver initialization.*/
  sioObjectInit(&SIOD5);
  PM_REGS->PM_APBCMASK |= PM_APBCMASK_SERCOM4_Msk;
  SIOD5.usart = &SERCOM4_REGS->USART_INT;
  SIOD5.clock = SAM_SERCOM4_GCLK_SRC_FREQ;
#endif
#if SAM_SIO_USE_SERCOM5 == TRUE
  /* Driver initialization.*/
  sioObjectInit(&SIOD6);
  PM_REGS->PM_APBCMASK |= PM_APBCMASK_SERCOM5_Msk;
  SIOD6.usart = &SERCOM5_REGS->USART_INT;
  SIOD6.clock = SAM_SERCOM5_GCLK_SRC_FREQ;
#endif
}

msg_t sio_lld_start(SIODriver *siop) {
  
  if (siop->config == NULL) {
    osalDbgAssert(siop->config, "SERCOM requires configuration");
  }
  if (siop->state == SIO_STOP) {
    /* Enables the peripheral.*/
#if SAM_SIO_USE_SERCOM0 == TRUE
    if (&SIOD1 == siop) {
      sam_gclk_mux(SAM_SERCOM0_GCLK_SRC_ID, GCLK_CLKCTRL_ID_SERCOM0_CORE_Val, 0);
      sam_gclk_mux(SAM_SERCOM0_GCLK_SRC_ID, GCLK_CLKCTRL_ID_SERCOM0_CORE_Val, 1);
      usart_reset(&SIOD1);
      nvicEnableVector(SERCOM0_IRQn, SAM_SERCOM0_IRQ_PRIORITY);
    }
#endif

#if SAM_SIO_USE_SERCOM1 == TRUE
    if (&SIOD2 == siop) {
      sam_gclk_mux(SAM_SERCOM1_GCLK_SRC_ID, GCLK_CLKCTRL_ID_SERCOM1_CORE_Val, 0);
      sam_gclk_mux(SAM_SERCOM1_GCLK_SRC_ID, GCLK_CLKCTRL_ID_SERCOM1_CORE_Val, 1);
      usart_reset(&SIOD2);
      nvicEnableVector(SERCOM1_IRQn, SAM_SERCOM1_IRQ_PRIORITY);
    }
#endif

#if SAM_SIO_USE_SERCOM2 == TRUE
    if (&SIOD3 == siop) {
      sam_gclk_mux(SAM_SERCOM2_GCLK_SRC_ID, GCLK_CLKCTRL_ID_SERCOM2_CORE_Val, 0);
      sam_gclk_mux(SAM_SERCOM2_GCLK_SRC_ID, GCLK_CLKCTRL_ID_SERCOM2_CORE_Val, 1);
      usart_reset(&SIOD3);
      nvicEnableVector(SERCOM2_IRQn, SAM_SERCOM2_IRQ_PRIORITY);
    }
#endif

#if SAM_SIO_USE_SERCOM3 == TRUE
    if (&SIOD4 == siop) {
      sam_gclk_mux(SAM_SERCOM3_GCLK_SRC_ID, GCLK_CLKCTRL_ID_SERCOM3_CORE_Val, 0);
      sam_gclk_mux(SAM_SERCOM3_GCLK_SRC_ID, GCLK_CLKCTRL_ID_SERCOM3_CORE_Val, 1);
      usart_reset(&SIOD4);
      nvicEnableVector(SERCOM3_IRQn, SAM_SERCOM3_IRQ_PRIORITY);
    }
#endif

#if SAM_SIO_USE_SERCOM4 == TRUE
    if (&SIOD5 == siop) {
      sam_gclk_mux(SAM_SERCOM4_GCLK_SRC_ID, GCLK_CLKCTRL_ID_SERCOM4_CORE_Val, 0);
      sam_gclk_mux(SAM_SERCOM4_GCLK_SRC_ID, GCLK_CLKCTRL_ID_SERCOM4_CORE_Val, 1);
      usart_reset(&SIOD5);
      nvicEnableVector(SERCOM4_IRQn, SAM_SERCOM4_IRQ_PRIORITY);
    }
#endif

#if SAM_SIO_USE_SERCOM5 == TRUE
    if (&SIOD6 == siop) {
      sam_gclk_mux(SAM_SERCOM5_GCLK_SRC_ID, GCLK_CLKCTRL_ID_SERCOM5_CORE_Val, 0);
      sam_gclk_mux(SAM_SERCOM5_GCLK_SRC_ID, GCLK_CLKCTRL_ID_SERCOM5_CORE_Val, 1);
      usart_reset(&SIOD6);
      nvicEnableVector(SERCOM5_IRQn, SAM_SERCOM5_IRQ_PRIORITY);
    }
#endif
  }
  /* Configures the peripheral.*/
  usart_init(siop);
  return HAL_RET_SUCCESS;
}

void sio_lld_stop(SIODriver *siop) {

  if (siop->state == SIO_READY) {
    /* Resets the peripheral.*/
    
    /* Disables the peripheral.*/
#if SAM_SIO_USE_SERCOM0 == TRUE
    if (&SIOD1 == siop) {
      usart_reset(&SIOD1);
      sam_gclk_mux(SAM_SERCOM0_GCLK_SRC_ID, GCLK_CLKCTRL_ID_SERCOM0_CORE_Val, 0);
      nvicDisableVector(SERCOM0_IRQn);
    }
#endif

#if SAM_SIO_USE_SERCOM1 == TRUE
    if (&SIOD2 == siop) {
      usart_reset(&SIOD2);
      sam_gclk_mux(SAM_SERCOM1_GCLK_SRC_ID, GCLK_CLKCTRL_ID_SERCOM1_CORE_Val, 0);
      nvicDisableVector(SERCOM1_IRQn);
    }
#endif

#if SAM_SIO_USE_SERCOM2 == TRUE
    if (&SIOD3 == siop) {
      usart_reset(&SIOD3);
      sam_gclk_mux(SAM_SERCOM2_GCLK_SRC_ID, GCLK_CLKCTRL_ID_SERCOM2_CORE_Val, 0);
      nvicDisableVector(SERCOM2_IRQn);
    }
#endif

#if SAM_SIO_USE_SERCOM3 == TRUE
    if (&SIOD4 == siop) {
      usart_reset(&SIOD4);
      sam_gclk_mux(SAM_SERCOM3_GCLK_SRC_ID, GCLK_CLKCTRL_ID_SERCOM3_CORE_Val, 0);
      nvicDisableVector(SERCOM3_IRQn);
    }
#endif

#if SAM_SIO_USE_SERCOM4 == TRUE
    if (&SIOD5 == siop) {
      usart_reset(&SIOD5);
      sam_gclk_mux(SAM_SERCOM4_GCLK_SRC_ID, GCLK_CLKCTRL_ID_SERCOM4_CORE_Val, 0);
      nvicDisableVector(SERCOM4_IRQn);
    }
#endif

#if SAM_SIO_USE_SERCOM5 == TRUE
    if (&SIOD6 == siop) {
      usart_reset(&SIOD6);
      sam_gclk_mux(SAM_SERCOM5_GCLK_SRC_ID, GCLK_CLKCTRL_ID_SERCOM5_CORE_Val, 0);
      nvicDisableVector(SERCOM5_IRQn);
    }
#endif
  }
}

sio_events_mask_t  sio_lld_get_and_clear_events(SIODriver *siop) {
  sio_events_mask_t evtmask = 0;
  uint8_t status = 0;
  uint8_t irq_status = 0;
  status = (uint8_t)(siop->usart->SERCOM_STATUS);
  irq_status = (uint8_t)(siop->usart->SERCOM_INTFLAG);
  if(status & SERCOM_USART_INT_STATUS_BUFOVF_Msk) {
    evtmask |= SIO_OVERRUN_ERROR;
  }
  if(status & SERCOM_USART_INT_STATUS_FERR_Msk) {
    evtmask |= SIO_FRAMING_ERROR;
  }
  if(status & SERCOM_USART_INT_STATUS_PERR_Msk) {
    evtmask |= SIO_PARITY_ERROR;
  }
  if(irq_status & SERCOM_USART_INT_INTFLAG_RXBRK_Msk) {
    evtmask |= SIO_BREAK_DETECTED;
    irq_status |= SERCOM_USART_INT_INTFLAG_RXBRK_Msk;
  }

  return evtmask;
}
